--- a/templates/kungfu-trader/template.html
+++ b/templates/kungfu-trader/template.html
@@ -80,7 +80,6 @@
 
         .custom-logo {
             display: block;
-            margin-top: -2px;
         }
 
         .header .container {
@@ -302,9 +301,8 @@
     <header class="header" style="position: fixed">
         <div class="header-content">
             <div class="container">
-                <a class="custom-logo-wrap" href="{{{homePage}}}" style="height: 79px">
-                    <img width="300" src="{{{logo.url}}}" height="82" style="margin-top: -2px" class="custom-logo"
-                        alt="">
+                <a class="custom-logo-wrap" href="{{{homePage}}}" style="height: 77px">
+                    <img width="300" height="77" src="{{{logo.url}}}" class="custom-logo" alt="">
                 </a>
                 <div class="nav-icon-wrap" id="toggle-nav">
                     <svg id="icon-open" style="display: block;" class="nav-icon" version="1.1"
