--- a/templates/kungfu-trader/detail.html
+++ b/templates/kungfu-trader/detail.html
@@ -30,7 +30,11 @@
         .panel {
             box-sizing: border-box;
             min-height: 400px;
-            min-height: calc(100vh - 100px);
+            min-height: calc(100vh - 210px);
+            padding-bottom: 36px;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-top: 110px;
         }
 
         @media (min-width: 578px) {
@@ -67,12 +71,11 @@
 
         .header-content {
             background-color: rgba(0, 0, 0, .8);
-            overflow: hidden;
         }
 
         .custom-logo-wrap {
             display: block;
-            margin-left: 30px;
+            margin-left: 28px;
         }
 
         .custom-logo {
@@ -92,7 +95,7 @@
             font-size: 18px;
             display: flex;
             justify-content: flex-end;
-            padding-right: 30px;
+            padding-right: 34px;
         }
 
         .nav-menu-item {
@@ -100,19 +103,18 @@
             overflow: visible;
             margin: 0;
             position: relative;
-            padding-top: 0px;
         }
 
         .nav-menu-item .nav-menu-link {
             display: block;
             color: #ffffff;
             transition: all .3s ease;
-            padding: 0 32px 0 18px;
+            padding: 0 18px;
             white-space: nowrap;
         }
 
         .nav-menu-item:last-child .nav-menu-link {
-            padding: 0 0 0 14px;
+            padding: 0 0 0 20px;
         }
 
         .nav-menu-item .nav-menu-link.active {
@@ -131,7 +133,6 @@
 
         .nav-menu-item .nav-menu-link-icon {
             height: 30px;
-            margin-top: -4px;
         }
 
         .nav-menu-item .drop-down-list {
@@ -222,12 +223,9 @@
             .nav-menu-link-icon {
                 filter: invert(100%);
             }
+
             .custom-logo-wrap {
                 margin-left: 0;
-            }
-
-            .nav-menu-item .nav-menu-link-icon {
-                margin-left: 4px;
             }
         }
 
@@ -261,48 +259,78 @@
         }
 
         /* HTML: <div class="loader"></div> */
-.loader {
-    transform: scale(2);
-  width: fit-content;
-  font-size: 17px;
-  font-family: monospace;
-  line-height: 1.4;
-  font-weight: bold;
-  --c: no-repeat linear-gradient(#000 0 0); 
-  background: var(--c),var(--c),var(--c),var(--c),var(--c),var(--c),var(--c);
-  background-size: calc(1ch + 1px) 100%;
-  border-bottom: 10px solid #0000; 
-  position: relative;
-  animation: l8-0 1s infinite linear;
-  clip-path: inset(-20px 0);
-}
-.loader::before {
-  content:"Loading";
-}
-.loader::after {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 14px;
-  background: #25adda;
-  left: -10px;
-  bottom: 100%;
-  animation: l8-1 1s infinite linear;
-}
-@keyframes l8-0{
-   0%,
-   12.5% {background-position: calc(0*100%/6) 0   ,calc(1*100%/6)    0,calc(2*100%/6)    0,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
-   25%   {background-position: calc(0*100%/6) 40px,calc(1*100%/6)    0,calc(2*100%/6)    0,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
-   37.5% {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6)    0,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
-   50%   {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6)    0,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
-   62.5% {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6)    0,calc(5*100%/6)    0,calc(6*100%/6) 0}
-   75%   {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6) 40px,calc(5*100%/6)    0,calc(6*100%/6) 0}
-   87.4% {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6) 40px,calc(5*100%/6) 40px,calc(6*100%/6) 0}
-   100%  {background-position: calc(0*100%/6) 40px,calc(1*100%/6) 40px,calc(2*100%/6) 40px,calc(3*100%/6) 40px,calc(4*100%/6) 40px,calc(5*100%/6) 40px,calc(6*100%/6) 40px}
-}
-@keyframes l8-1{
-  100% {left:115%}
-}
+        .loader {
+            transform: scale(2);
+            width: fit-content;
+            font-size: 17px;
+            font-family: monospace;
+            line-height: 1.4;
+            font-weight: bold;
+            --c: no-repeat linear-gradient(#000 0 0);
+            background: var(--c), var(--c), var(--c), var(--c), var(--c), var(--c), var(--c);
+            background-size: calc(1ch + 1px) 100%;
+            border-bottom: 10px solid #0000;
+            position: relative;
+            animation: l8-0 1s infinite linear;
+            clip-path: inset(-20px 0);
+        }
+
+        .loader::before {
+            content: "Loading";
+        }
+
+        .loader::after {
+            content: "";
+            position: absolute;
+            width: 10px;
+            height: 14px;
+            background: #25adda;
+            left: -10px;
+            bottom: 100%;
+            animation: l8-1 1s infinite linear;
+        }
+
+        @keyframes l8-0 {
+
+            0%,
+            12.5% {
+                background-position: calc(0*100%/6) 0, calc(1*100%/6) 0, calc(2*100%/6) 0, calc(3*100%/6) 0, calc(4*100%/6) 0, calc(5*100%/6) 0, calc(6*100%/6) 0
+            }
+
+            25% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 0, calc(2*100%/6) 0, calc(3*100%/6) 0, calc(4*100%/6) 0, calc(5*100%/6) 0, calc(6*100%/6) 0
+            }
+
+            37.5% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 40px, calc(2*100%/6) 0, calc(3*100%/6) 0, calc(4*100%/6) 0, calc(5*100%/6) 0, calc(6*100%/6) 0
+            }
+
+            50% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 40px, calc(2*100%/6) 40px, calc(3*100%/6) 0, calc(4*100%/6) 0, calc(5*100%/6) 0, calc(6*100%/6) 0
+            }
+
+            62.5% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 40px, calc(2*100%/6) 40px, calc(3*100%/6) 40px, calc(4*100%/6) 0, calc(5*100%/6) 0, calc(6*100%/6) 0
+            }
+
+            75% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 40px, calc(2*100%/6) 40px, calc(3*100%/6) 40px, calc(4*100%/6) 40px, calc(5*100%/6) 0, calc(6*100%/6) 0
+            }
+
+            87.4% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 40px, calc(2*100%/6) 40px, calc(3*100%/6) 40px, calc(4*100%/6) 40px, calc(5*100%/6) 40px, calc(6*100%/6) 0
+            }
+
+            100% {
+                background-position: calc(0*100%/6) 40px, calc(1*100%/6) 40px, calc(2*100%/6) 40px, calc(3*100%/6) 40px, calc(4*100%/6) 40px, calc(5*100%/6) 40px, calc(6*100%/6) 40px
+            }
+        }
+
+        @keyframes l8-1 {
+            100% {
+                left: 115%
+            }
+        }
 
         #loader-wrap {
             position: fixed;
